# multiagent-research-system

./: README.md  main.py  pyproject.toml
utils/: agent.py  pipeline.py  tools.py
