[project]
name = "multi-agent-reserch-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "streamlit>=1.57.0",
    "tavily>=1.1.0",
]
